# WebExplorer

./: .env.example  .gitignore  README.md  __init__.py  agent.py  justfile  passwords.txt  pyproject.toml
adapters/: __init__.py  credentials.py  playwright_cli.py
app/: __init__.py  context_memory.py  models.py  policies.py  prompts.py  state_schema.py
docs/adk-playwright-agent/: BROWSER_BACKED_ACTION_DISCOVERY.md  IMPLEMENTATION_PLAN.md  MULTI_STEP_CRAWLER_PLAN.md  README.md  TOOLS_AND_STATE.md
eval/criteria/: output_quality.md  route_coverage.md
eval/fixtures/: action_intent_manifest.json  sample_routes.json
scripts/: compare_manifests.py  context_memory_smoke.py  crawler_manifest_smoke.py  credentials_smoke.py  intent_smoke.py  manifest_smoke.py  workflow_smoke.py
skills/manifest-first-route-workflow/: SKILL.md
templates/: playwright_test_template.spec.ts  task_json_template.json
tools/: __init__.py  browser_tools.py  crawler_tools.py  generator_tools.py  intent_tools.py  validation_tools.py  workflow_tools.py  workspace_tools.py
