[project]
name = "adk-playwright-agent"
version = "0.1.0"
description = "ADK scaffold for a web exploration and test authoring agent powered by playwright-cli."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-adk>=1.29.0,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
adk_playwright_agent = [
  "templates/*.json",
  "templates/*.ts",
  "eval/criteria/*.md",
  "eval/fixtures/*.json",
]
