[project]
name = "adk-playwright-agent"
version = "0.1.0"
description = "ADK scaffold for a web exploration and test authoring agent powered by playwright-cli."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "google-adk>=1.31.0,<2.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true
packages = [
  "adk_playwright_agent",
  "adk_playwright_agent.app",
  "adk_playwright_agent.tools",
  "adk_playwright_agent.adapters",
]

[tool.setuptools.package-dir]
"adk_playwright_agent" = "."
"adk_playwright_agent.app" = "app"
"adk_playwright_agent.tools" = "tools"
"adk_playwright_agent.adapters" = "adapters"

[tool.setuptools.package-data]
adk_playwright_agent = [
  "docs/adk-playwright-agent/*.md",
  "skills/*/SKILL.md",
  "templates/*.json",
  "templates/*.ts",
  "eval/criteria/*.md",
  "eval/fixtures/*.json",
]
